# ilearning-ppt-downloader

./: .env.example  .gitignore  .pdm-python  README.md  build.py  pyproject.toml
notebooks/: ddddocr.ipynb  get_slide.ipynb  login.ipynb
src/: browser.py  main.py
