[project]
name = "ilearning-ppt-downloader"
version = "0.1.0"
description = "iLearning PPT 爬取工具"
authors = [{ name = "pytree", email = "houjunqimail@gmail.com" }]
dependencies = [
    "selenium>=4.27.1",
    "ddddocr>=1.5.6",
    "python-dotenv>=1.0.1",
    "nicegui>=2.9.1",
    "bs4>=0.0.2",
    "simplejson>=3.19.3",
    "Pillow>=10.2.0",
    "reportlab>=4.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "F841", "I001"] # jupyter notebook

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
disable_error_code = ["empty-body"]
warn_return_any = true
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
incremental = true
strict_optional = true
show_traceback = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
force_uppercase_builtins = true
force_union_syntax = true

[tool.pdm]
distribution = false
[tool.pdm.scripts]
main = "python src/main.py"
lab = "jupyter lab"
build-tool = "nuitka_simple_gui"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "mypy>=1.15.0",
    "jupyterlab>=4.3.5",
    "types-requests>=2.32.0.20250301",
    "Nuitka>=2.6.7",
    "nuitka-simple-gui>=2025.1.7",
]
